# kcomm

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  kcomm  kcomm.bash  kcomm.ps1  kcomm.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: DEV_PLAN.md  PYTHON_ACCEPTANCE.md  PYTHON_COMPATIBILITY.md
src/kcomm/: __init__.py  cli.py
tests/: test_cli_integration.py  test_kcomm_py.py
