[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kcomm"
dynamic = ["version"]
description = "Python-first kcomm CLI for Kubernetes pod shell access"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "lamwl" },
]
keywords = ["kubernetes", "kubectl", "cli", "devops", "pod", "shell"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
  "InquirerPy",
]

[project.urls]
Homepage = "https://github.com/lamwl/kcomm"
Repository = "https://github.com/lamwl/kcomm"
Issues = "https://github.com/lamwl/kcomm/issues"

[project.scripts]
kcomm = "kcomm.cli:main"
kcomm-py = "kcomm.cli:main"

[tool.setuptools.dynamic]
version = { attr = "kcomm.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
